# tablecloth

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml  tests.yml
docs/: conf.py  features.rst  index.rst  reference.rst
docs/_static/: custom.css
src/tablecloth/: __init__.py  constants.py  excel.py  gsheets.py  helpers.py  layout.py
src/tablecloth/font_widths/: arial-bold-italic.pkl  arial-bold-italic.yaml  arial-bold.pkl  arial-bold.yaml  arial-italic.pkl  arial-italic.yaml  arial.pkl  arial.yaml  calibri-bold-italic.pkl  calibri-bold-italic.yaml  calibri-bold.pkl  calibri-bold.yaml  calibri-italic.pkl  calibri-italic.yaml  calibri.pkl  calibri.yaml  courier new-bold-italic.yaml  courier new-bold.pkl  courier new-bold.yaml  courier new-italic.pkl  courier new.pkl  courier new.yaml  times new roman-bold-italic.pkl  times new roman-bold-italic.yaml  times new roman-bold.pkl  times new roman-bold.yaml  times new roman-italic.pkl  times new roman-italic.yaml  times new roman.pkl  times new roman.yaml
tests/: __init__.py  conftest.py  datapackage.yaml  test_excel.py  test_gsheets.py  test_helpers.py  test_layout.py  test_missing_dependencies.py
tests/xlsx/: default.xlsx  errors-except-fkeys.xlsx  errors.xlsx  hide-columns.xlsx
